# clice

./: pyproject.toml
src/clice/: __init__.py  main.py
