[project]
name = "clice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leander Lutze", email = "leander.lutze@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
clice = "clice:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
